in Health appendix: rephrased explanation of why not using 2 lags in FAM estimation

--- a/Appendices/Health/bgdesc.tex
+++ b/Appendices/Health/bgdesc.tex
@@ -23,7 +23,7 @@ taxes, medical expenditures, and disability benefits. \\
 
 \noindent The likelihood of developing a health condition depends on key risk factors including age, gender, education, race and ethnicity, obesity (BMI greater than 30 kg/m$^2$), smoking status, physical activity, age of asthma diagnosis, and lagged health outcomes. By incorporating lagged variables into the model, we account for the likelihood that past behaviors may influence risks far into the future. This capacity is important because prior research indicates that past health behaviors, such as recency of prior smoking and a history of obesity, can influence current health outcomes.\footnote{\citet{Tong_etal_1996-Lung-Carcinoma,Moore_etal_2008_Past-Body-Mass}.} Furthermore, because transition probabilities vary depending on demographic characteristics, such as race and ethnicity, education, gender, and age, the model tracks outcomes by socioeconomic subgroups, and it allows for responses to policies to be subgroup-specific. \\
 
-\noindent Like the previous literature that uses FEM and FAM, we model transitions of all health conditions, risk factors, disability, and mortality with a first-order Markov process. From a practical point of view, there are two main reasons why we prefer the assumption that risk factors and health conditions only from the prior period determine health transitions, instead of allowing for a higher order process. The first reason has to do with the ABC/CARE data: the available health follow-up data lacks multiple consecutive observations of health conditions for adults. Therefore, it is only possible to implement the simulation for the entering cohort as long as the transition matrix only depends on the previous period state vector (which corresponds to the health data in the ABC/CARE interviews). The second reason concerns the estimation: restricting the PSID sample to individuals present in three consecutive waves could leave out unhealthier or less stable individuals who have a higher probability of dropping out. \\
+\noindent Like the previous literature that uses FEM and FAM, we model transitions of all health conditions, risk factors, disability, and mortality with a first-order Markov process. From a practical point of view, there are two main reasons why we prefer the assumption that risk factors and health conditions only from the prior period determine health transitions, instead of allowing for a higher order process. The first reason has to do with the ABC/CARE data: the available health follow-up data lacks multiple consecutive observations of health conditions for adults. Therefore, it is only possible to implement the simulation for the entering cohort as long as the transition matrix only depends on the previous period state vector (which corresponds to the health data in the ABC/CARE interviews). The second reason concerns the estimation: restricting the PSID sample to individuals present in three consecutive waves could introduce bias by leaving out those who have a higher probability of dropping out, such as individuals in poor health. \\
 
 \noindent Health conditions are treated as absorbing states, i.e., once a person has a disease she is assumed to have it forever. But this is not the case for risk factors: a person can transition out of an obese state and back into it, a person can quit smoking and resume smoking. To discipline the rich dynamics of the model and based on evidence from the medical literature, a number of restrictions are placed on the way a disease or condition is associated with the transitions of other conditions (see Section \ref{section:transition_models} for details).  \\
 %Include table for models, reference here or in methods?
