--- a/Appendices/Results.tex
+++ b/Appendices/Results.tex
@@ -133,4 +133,4 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 
 \noindent Beginning with Table~\ref{table:abccare_rslt_pooled_cat0}, we display treatment effects by outcome. We divide the tables by different blocks of related outcomes. In each table we also present one or two factors constructed with the methodology in Section~\ref{section:accendog}. The idea behind doing this is to recover a ``latent'' outcome summarizing the outcomes in the table (e.g., latent IQ across IQ from ages 2 to 5). That is, measure the latent outcome using outcomes at various ages as measures of this latent. Testing for treatment effects on this factor it is yet another alternative to summarize treatment effects across a block of outcomes.
 
-\input{AppResOutput/1_abccare}
+\input{AppResOutput/1_abccare_appendix}
